<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.h2physics.loginui.MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        app:layout_heightPercent="30%"
        app:layout_marginTopPercent="40%"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            app:layout_heightPercent="40%"
            android:background="@drawable/border_bottom_view">

            <ImageView
                android:src="@drawable/icon_username"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:alpha="0.7"/>

            <EditText
                android:id="@+id/editText_username"
                android:hint="@string/username"
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:singleLine="true"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            app:layout_heightPercent="40%"
            android:background="@drawable/border_bottom_view"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:layout_alignParentBottom="true">

            <ImageView
                android:src="@drawable/icon_password"
                android:alpha="0.7"
                android:layout_width="40dp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/editText_password"
                android:hint="@string/password"
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:background="@color/transparent"
                android:password="true"
                android:singleLine="true" />

        </LinearLayout>

    </android.support.percent.PercentRelativeLayout>

    <Button
        android:id="@+id/button_signIn"
        android:layout_height="50dp"
        android:layout_width="200dp"
        app:layout_marginTopPercent="75%"
        android:text="@string/sign_in"
        android:textColor="@color/colorWhite"
        android:backgroundTint="@color/colorAccent"
        android:background="@drawable/rounded_view"
        android:layout_centerHorizontal="true" />

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <TextView
            app:layout_widthPercent="60%"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="17sp"
            android:text="@string/no_account"/>

        <TextView
            android:id="@+id/textView_signUp"
            app:layout_widthPercent="40%"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingLeft="10dp"
            android:gravity="left"
            android:textSize="17sp"
            android:text="@string/sign_up"/>

    </android.support.percent.PercentRelativeLayout>

</android.support.percent.PercentRelativeLayout>
